--- a/vol1/java-examples/build.gradle
+++ b/vol1/java-examples/build.gradle
@@ -8,6 +8,8 @@ repositories {
 }
 
 dependencies {
+    testCompile 'org.hamcrest:hamcrest-all:1.3'
+    testCompile 'junit:junit:4.10'
     compile 'net.sf.opencsv:opencsv:2.3'
 }
 
