--- a/vol1/java-examples/build.gradle
+++ b/vol1/java-examples/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'junit:junit:4.10'
     compile 'net.sf.opencsv:opencsv:2.3'
+    compile 'gov.nist.math:jama:1.0.3'
 }
 
 task wrapper(type: Wrapper) {
