--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.DS_Store
+# Java
 .gradle
 .idea
 .RData
@@ -11,6 +11,71 @@
 
 !gradle-wrapper.jar
 
+# Python
+
 *.py[c|o]
 *.swp
 *.Rout
+
+
+#OS junk files
+[Tt]humbs.db
+*.DS_Store
+
+#Visual Studio files
+*.[Oo]bj
+*.user
+*.aps
+*.pch
+*.vspscc
+*.vssscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.[Cc]ache
+*.ilk
+*.log
+*.lib
+*.sbr
+*.sdf
+*.opensdf
+*.unsuccessfulbuild
+ipch/
+obj/
+[Bb]in
+[Dd]ebug*/
+[Rr]elease*/
+Ankh.NoLoad
+
+#MonoDevelop
+*.pidb
+*.userprefs
+
+#Visual Studio: Tooling
+_ReSharper*/
+*.resharper
+[Tt]est[Rr]esult*
+*.sass-cache
+
+#Visual Studio: Project files
+[Bb]uild/
+
+# Office Temp Files
+~$*
+
+#NuGet
+packages/
+
+# Visual Studio: ncrunch
+*ncrunch*
+*crunch*.local.xml
+
+# Visual Studio: database projects
+*.dbmdl
+
+# Visual Studio: Test files
+*.testsettings
