--- a/vol1/csharp-examples/AIFH-Vol1-Core/AIFH-Vol1-Core.csproj
+++ b/vol1/csharp-examples/AIFH-Vol1-Core/AIFH-Vol1-Core.csproj
@@ -66,6 +66,18 @@
     <Compile Include="Core\General\VectorUtil.cs" />
     <Compile Include="Core\KMeans\Cluster.cs" />
     <Compile Include="Core\KMeans\KMeansClustering.cs" />
+    <Compile Include="Core\Learning\IClassificationAlgorithm.cs" />
+    <Compile Include="Core\Learning\ILearningMethod.cs" />
+    <Compile Include="Core\Learning\IMachineLearningAlgorithm.cs" />
+    <Compile Include="Core\Learning\IRegressionAlgorithm.cs" />
+    <Compile Include="Core\Learning\RBFNetwork.cs" />
+    <Compile Include="Core\Learning\Score\IScoreFunction.cs" />
+    <Compile Include="Core\Learning\Score\ScoreClassificationData.cs" />
+    <Compile Include="Core\Learning\Score\ScoreRegressionData.cs" />
+    <Compile Include="Core\Learning\TrainAnneal.cs" />
+    <Compile Include="Core\Learning\TrainGreedyRandom.cs" />
+    <Compile Include="Core\Learning\TrainHillClimb.cs" />
+    <Compile Include="Core\Learning\TrainNelderMead.cs" />
     <Compile Include="Core\Normalize\DataSet.cs" />
     <Compile Include="Core\Normalize\Equilateral.cs" />
     <Compile Include="Core\Randomize\AbstractBoxMuller.cs" />
@@ -76,6 +88,7 @@
     <Compile Include="Core\Randomize\MersenneTwisterGenerateRandom.cs" />
     <Compile Include="Core\Randomize\MultiplyWithCarryGenerateRandom.cs" />
     <Compile Include="Core\Randomize\SecureGenerateRandom.cs" />
+    <Compile Include="Core\Regression\MultipleLinearRegression.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
