Added regression classes

--- a/vol1/csharp-examples/AIFH-Vol1-Core/AIFH-Vol1-Core.csproj
+++ b/vol1/csharp-examples/AIFH-Vol1-Core/AIFH-Vol1-Core.csproj
@@ -33,8 +33,15 @@
     <Reference Include="CsvHelper">
       <HintPath>..\packages\CsvHelper.2.2.2\lib\net40-client\CsvHelper.dll</HintPath>
     </Reference>
+    <Reference Include="MathNet.Numerics">
+      <HintPath>..\packages\MathNet.Numerics.2.6.1\lib\net40\MathNet.Numerics.dll</HintPath>
+    </Reference>
+    <Reference Include="MathNet.Numerics.IO">
+      <HintPath>..\packages\MathNet.Numerics.2.6.1\lib\net40\MathNet.Numerics.IO.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -94,6 +101,8 @@
     <Compile Include="Core\Randomize\MultiplyWithCarryGenerateRandom.cs" />
     <Compile Include="Core\Randomize\SecureGenerateRandom.cs" />
     <Compile Include="Core\Regression\MultipleLinearRegression.cs" />
+    <Compile Include="Core\Regression\TrainLeastSquares.cs" />
+    <Compile Include="Core\Regression\TrainReweightLeastSquares.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
