Added remaining C# unit tests.

--- a/vol1/csharp-examples/UnitTests/UnitTests.csproj
+++ b/vol1/csharp-examples/UnitTests/UnitTests.csproj
@@ -59,7 +59,35 @@
     <Compile Include="Core\Error\TestErrorCalculationESS.cs" />
     <Compile Include="Core\Error\TestErrorCalculationMSE.cs" />
     <Compile Include="Core\Error\TestErrorCalculationRMS.cs" />
+    <Compile Include="Core\General\Data\TestBasicData.cs" />
+    <Compile Include="Core\General\Fns\Link\TestIdentityLinkFunction.cs" />
+    <Compile Include="Core\General\Fns\Link\TestInverseLinkFunction.cs" />
+    <Compile Include="Core\General\Fns\Link\TestInverseSquaredLinkFunction.cs" />
+    <Compile Include="Core\General\Fns\Link\TestLogitLinkFunction.cs" />
+    <Compile Include="Core\General\Fns\Link\TestLogLinkFunction.cs" />
+    <Compile Include="Core\General\Fns\TestGaussianFunction.cs" />
+    <Compile Include="Core\General\Fns\TestInverseMultiquadricFunction.cs" />
+    <Compile Include="Core\General\Fns\TestMexicanHatFunction.cs" />
+    <Compile Include="Core\General\Fns\TestMultiquadricFunction.cs" />
     <Compile Include="Core\General\TestVectorUtil.cs" />
+    <Compile Include="Core\KMeans\TestCluster.cs" />
+    <Compile Include="Core\KMeans\TestKMeans.cs" />
+    <Compile Include="Core\Learning\Score\SimpleAlgo.cs" />
+    <Compile Include="Core\Learning\Score\TestScoreClassificationData.cs" />
+    <Compile Include="Core\Learning\Score\TestScoreRegressionData.cs" />
+    <Compile Include="Core\Learning\TestLearnAnneal.cs" />
+    <Compile Include="Core\Learning\TestRBFNetwork.cs" />
+    <Compile Include="Core\Learning\TestTraining.cs" />
+    <Compile Include="Core\Learning\TrialAlgo.cs" />
+    <Compile Include="Core\Learning\TrialScore.cs" />
+    <Compile Include="Core\Normalize\TestDataSet.cs" />
+    <Compile Include="Core\Normalize\TestEquilateral.cs" />
+    <Compile Include="Core\Randomize\TestLinearCongruentialRandom.cs" />
+    <Compile Include="Core\Randomize\TestMersenneTwisterGenerateRandom.cs" />
+    <Compile Include="Core\Randomize\TestMultiplyWithCarryGenerateRandom.cs" />
+    <Compile Include="Core\Regression\TestMultipleLinearRegression.cs" />
+    <Compile Include="Core\Regression\TestTrainLeastSquares.cs" />
+    <Compile Include="Core\Regression\TestTrainReweightLeastSquares.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
