--- a/vol1/csharp-examples/packages/repositories.config
+++ b/vol1/csharp-examples/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\AIFH-Vol1\packages.config" />
   <repository path="..\AIFH-Vol1-Core\packages.config" />
 </repositories>
