Added target JDK

--- a/vol1/java-examples/build.gradle
+++ b/vol1/java-examples/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
+targetCompatibility = 1.7
+sourceCompatibility = 1.7
+
 repositories {
     mavenCentral()
 }
