Finished chapter 1 examples for C/C++, added libcsv

--- a/vol1/c-examples/AIFH-VOL1.vcxproj.filters
+++ b/vol1/c-examples/AIFH-VOL1.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClInclude Include="aifh-vol1-examples.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="csv.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AIFH-VOL1.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ExampleReadCSV.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="libcsv.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
