--- a/vol1/c-examples/AIFH-VOL1.vcxproj.filters
+++ b/vol1/c-examples/AIFH-VOL1.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClCompile Include="Normalize.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Data.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
