--- a/vol1/c-examples/AIFH-VOL1.vcxproj.filters
+++ b/vol1/c-examples/AIFH-VOL1.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClCompile Include="Equilateral.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ExampleSimpleNormalize.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
