--- a/vol1/c-examples/AIFH-VOL1.vcxproj
+++ b/vol1/c-examples/AIFH-VOL1.vcxproj
@@ -97,11 +97,13 @@
     <ClCompile Include="ExampleAnalyze.c" />
     <ClCompile Include="ExampleDistance.c" />
     <ClCompile Include="ExampleNormalize.c" />
+    <ClCompile Include="ExampleRandom.c" />
     <ClCompile Include="ExampleReadCSV.c" />
     <ClCompile Include="ExampleSimpleNormalize.c" />
     <ClCompile Include="ExampleUtil.c" />
     <ClCompile Include="libcsv.c" />
     <ClCompile Include="Normalize.c" />
+    <ClCompile Include="Random.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
