--- a/vol1/c-examples/AIFH-VOL1.vcxproj.filters
+++ b/vol1/c-examples/AIFH-VOL1.vcxproj.filters
@@ -86,5 +86,11 @@
     <ClCompile Include="ExamplePI.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ExampleKMeans.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ExampleTest.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
