--- a/vol1/c-examples/AIFH-VOL1.vcxproj.filters
+++ b/vol1/c-examples/AIFH-VOL1.vcxproj.filters
@@ -113,5 +113,8 @@
     <ClCompile Include="ExampleLearnXOR.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ExampleLearnIris.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
