C: Added discrete TSP anneal example

--- a/vol1/c-examples/AIFH-VOL1.vcxproj
+++ b/vol1/c-examples/AIFH-VOL1.vcxproj
@@ -97,6 +97,7 @@
     <ClCompile Include="Equilateral.c" />
     <ClCompile Include="Error.c" />
     <ClCompile Include="ExampleAnalyze.c" />
+    <ClCompile Include="ExampleAnnealTSP.c" />
     <ClCompile Include="ExampleDistance.c" />
     <ClCompile Include="ExampleError.c" />
     <ClCompile Include="ExampleKMeans.c" />
