C:Added knapsack example.

--- a/vol1/c-examples/AIFH-VOL1.vcxproj.filters
+++ b/vol1/c-examples/AIFH-VOL1.vcxproj.filters
@@ -131,5 +131,8 @@
     <ClCompile Include="ExampleAnnealTSP.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ExampleAnnealKnapsack.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
