C: Working on GLM

--- a/vol1/c-examples/AIFH-VOL1.vcxproj
+++ b/vol1/c-examples/AIFH-VOL1.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="ExampleAnnealTSP.c" />
     <ClCompile Include="ExampleDistance.c" />
     <ClCompile Include="ExampleError.c" />
+    <ClCompile Include="ExampleGLM.c" />
     <ClCompile Include="ExampleKMeans.c" />
     <ClCompile Include="ExampleLearnIris.c" />
     <ClCompile Include="ExampleLearnIrisAnneal.c" />
