--- a/vol1/c-examples/AIFH-VOL1.vcxproj.filters
+++ b/vol1/c-examples/AIFH-VOL1.vcxproj.filters
@@ -143,5 +143,8 @@
     <ClCompile Include="ExampleLinearRegression.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ExampleGLM.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
