--- a/vol1/csharp-examples/AIFH-Vol1-Core/packages.config
+++ b/vol1/csharp-examples/AIFH-Vol1-Core/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CsvHelper" version="2.2.2" targetFramework="net45" />
   <package id="MathNet.Numerics" version="2.6.1" targetFramework="net45" />
+  <package id="MathNet.Numerics" version="2.6.2" targetFramework="net45" />
 </packages>
