C: Update CMAKE for new files, added CMAKE files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,9 @@ packages/
 
 # Visual Studio: Test files
 *.testsettings
+
+# CMake
+CMakeCache.txt
+CMakeFiles
+cmake_install.cmake
+install_manifest.txt
