--- a/vol1/c-examples/CMakeLists.txt
+++ b/vol1/c-examples/CMakeLists.txt
@@ -12,26 +12,42 @@ endif()
 include_directories(.)
 
 add_executable(aifh_vol1 AIFH-VOL1.c
-    Data.c
-    Distance.c
-    Equilateral.c
+	asa047.c
+	Data.c
+	Distance.c
+	Equilateral.c
 	Error.c
-    ExampleAnalyze.c
-    ExampleDistance.c
-    ExampleError.c
-    ExampleKMeans.c
-    ExampleNormalize.c
-    ExamplePI.c
-    ExampleRandom.c
-    ExampleReadCSV.c
-    ExampleSimpleNormalize.c
-    ExampleTest.c
-    ExampleUtil.c
-    KMeans.c
-    Normalize.c
-    Random.c
-    libcsv.c
-    mt19937ar.c)
+	ExampleAnalyze.c
+	ExampleAnnealKnapsack.c
+	ExampleAnnealTSP.c
+	ExampleDistance.c
+	ExampleError.c
+	ExampleGLM.c
+	ExampleKMeans.c
+	ExampleLearnIris.c
+	ExampleLearnIrisAnneal.c
+	ExampleLearnIrisClimb.c
+	ExampleLearnIrisNelderMead.c
+	ExampleLearnPoly.c
+	ExampleLearnXOR.c
+	ExampleLinearRegression.c
+	ExampleNormalize.c
+	ExamplePI.c
+	ExampleRandom.c
+	ExampleReadCSV.c
+	ExampleSimpleNormalize.c
+	ExampleTest.c
+	ExampleUtil.c
+	KMeans.c
+	libcsv.c
+	matrix.c
+	mt19937ar.c
+	Normalize.c
+	Random.c
+	RBF.c
+	RBFNetwork.c
+	Regression.c
+	Train.c)
 
 # Needs maths
 target_link_libraries(aifh_vol1 m)
